// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-4[data-size='small'] {
  height: 2.5rem;
}

.emotion-4[data-size='medium'] {
  height: 3rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-7[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-7[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-7[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-7[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7[data-image="illustration"] {
  padding: 0rem;
}

.emotion-7[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-7:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-7:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-7[data-has-label='true'] .emotion-10,
.emotion-7[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-7:hover,
.emotion-7:active {
  box-shadow: none;
  border: none;
}

.emotion-7:hover:not([data-error='true'][data-disabled='true']),
.emotion-7:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-7[data-checked='true'] {
  border: none;
}

.emotion-7 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-7[data-checked='true'] label {
  color: #ffffff;
}

.emotion-7:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-12[data-checked='true'] {
  color: #641cb3;
}

.emotion-12[data-error='true'] {
  color: #b3144d;
}

.emotion-12[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-12 input+svg {
  display: none;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 {
  fill: #d9dadd;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 {
  background: none;
  fill: #8c40ef;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-23 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          data-size="small"
        >
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="_r_2_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="_r_2_"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="_r_6_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="_r_6_"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-4[data-size='small'] {
  height: 2.5rem;
}

.emotion-4[data-size='medium'] {
  height: 3rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-7[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-7[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-7[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-7[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7[data-image="illustration"] {
  padding: 0rem;
}

.emotion-7[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-7:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-7:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-7:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-7[data-has-label='true'] .emotion-10,
.emotion-7[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-7:hover,
.emotion-7:active {
  box-shadow: none;
  border: none;
}

.emotion-7:hover:not([data-error='true'][data-disabled='true']),
.emotion-7:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-7[data-checked='true'] {
  border: none;
}

.emotion-7 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-7[data-checked='true'] label {
  color: #ffffff;
}

.emotion-7:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-12[aria-disabled='false'],
.emotion-12[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #e5dbfd;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffd3e3;
}

.emotion-12[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12[aria-disabled='true']>label,
.emotion-12[aria-disabled='true'] .emotion-15 {
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-12[aria-disabled='true'] .emotion-17 .emotion-19 {
  fill: #f3f3f4;
}

.emotion-12[data-checked='true'] {
  color: #641cb3;
}

.emotion-12[data-error='true'] {
  color: #b3144d;
}

.emotion-12[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-12 input+svg {
  display: none;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 {
  fill: #d9dadd;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false']:not([data-checked='true']) .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 {
  fill: #8c40ef;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 {
  fill: #b3144d;
}

.emotion-12:hover[aria-disabled='false'] .emotion-15[aria-invalid='true']+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 {
  background: none;
  fill: #8c40ef;
}

.emotion-12 .emotion-15[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #ffffff;
}

.emotion-14 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-14+.emotion-17 .emotion-21 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-14:checked+svg .emotion-21 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-14:checked[aria-disabled='false'][aria-invalid='false']+.emotion-17 {
  fill: #8c40ef;
}

.emotion-14:checked[aria-disabled='true'][aria-invalid='false']+.emotion-17 {
  fill: #d8c5fc;
}

.emotion-14[aria-invalid='true']:not([aria-disabled='true'])+.emotion-17 {
  fill: #e51963;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-14[aria-disabled='false']:active+.emotion-17 .emotion-19 {
  fill: #f1eefc;
}

.emotion-14[aria-disabled='false']:focus-visible+.emotion-17 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-14[aria-invalid='true']:focus+.emotion-17 .emotion-19 {
  fill: #ffebf2;
}

.emotion-16 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-16 .emotion-19 {
  fill: #ffffff;
}

.emotion-23 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          data-size="small"
        >
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="_r_b_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="_r_b_"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 emotion-8"
            data-checked="false"
            data-disabled="false"
            data-has-default-cursor="false"
            data-has-label="true"
            data-image="none"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <div
                aria-disabled="false"
                class="emotion-11 emotion-12 emotion-13"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-14 emotion-15"
                  id="_r_f_"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="emotion-16 emotion-17"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-18 emotion-19"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-20 emotion-21"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-22 emotion-23 emotion-24"
                  for="_r_f_"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class=" uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
